--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,11 +9,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="stylesheet" id="csstheme" href="/stylesheets/style.css" type="text/css" />
-  <title>neuPlanet</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
+  <title>neuPlanet</title>
   </head>
+
   <body>
 <main class="container">
     <div class="d-flex flex-row align-items-center justify-content-around">
@@ -28,10 +27,11 @@
         <button id="post-submit" class="btn btn-sm btn-outline-primary">Post</button>
       </div>
     </div>
-    <div class="tab" id="feedTab">
-        <p class="lead">Feed</p>
+    <div class="tab scroll" id="feedTab">
+        <div><h4>Feed</h4>
         <hr>
-        <div id="feed"></div>
+      </div>
+      <div id="feed"></div>
     </div>
   </div>
 </main>
