--- a/app/public/index.html
+++ b/app/public/index.html
@@ -18,6 +18,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel='icon'
+        href='/app/public/img/favicon.ico'
+        type='image/x-icon' />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>neuPlanet</title>
   </head>
