--- a/app/public/index.html
+++ b/app/public/index.html
@@ -18,9 +18,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel='icon'
-        href='/app/public/img/favicon.ico'
-        type='image/x-icon' />
+    <link rel="icon" type="image/png" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <title>neuPlanet</title>
   </head>
