dialing in layout

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -31,11 +31,11 @@
           <h2>neuPlanet</h2>
         </div>
         <div class="pad" id="postTab">
-          <span class="material-icons thistle">chat_bubble</span>
+          <span class="material-icons thistle float-right">person_pin</span>
           <input type="text" id="author" placeholder="username" />
           <hr />
           <textarea
-            rows="3"
+            rows="2"
             id="input-box"
             placeholder="What's going on in your world?"
           ></textarea>
